netty模块-利用protobuf序列化传输消息

--- a/java-netty/pom.xml
+++ b/java-netty/pom.xml
@@ -13,6 +13,7 @@
 
 
     <dependencies>
+        <!--日志和lombok-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -23,6 +24,23 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
         </dependency>
+
+        <!-- Netty 相关-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.20.Final</version>
+        </dependency>
+
+        <!-- protobuf -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.4</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
